@@ -1,6 +1,9 @@
 2007-05-18  Brian Bidulock  <bidulock@openss7.org>
 
 	* src/kernel/strsched.c: ifdefs for debugging
+	* doc/man/man9/dupb.9.man: documentation updates
+	* doc/papers/piperesults.tex: spelling
+	* src/util/strace.c: correct trace argument handling
 
 2007-05-17  Brian Bidulock  <bidulock@openss7.org>
 
